<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.vivek.rapidapi.viewmodels.CountryViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16.0dip"
                android:layout_marginTop="@dimen/all_country_dimens"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/allcountries"
                android:textColor="@color/dayNight_textColor"
                android:textSize="38.0sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="@dimen/search_card_dimens"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/searchBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="7"
                        android:background="@null"
                        android:src="@drawable/ic_search"
                        tools:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/searchText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editext_height_dimens"
                        android:layout_margin="@dimen/editext_margin_dimens"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/search"
                        android:lines="1"
                        android:padding="@dimen/editext_padding_dimens"
                        tools:ignore="Autofill,TextFields" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{viewModel.isEmpty ? View.VISIBLE : View.GONE}">

                <com.vivek.rapidapi.ui.custom.SquareImageView
                    android:layout_width="@dimen/empty_icon_size"
                    android:layout_height="@dimen/empty_icon_size"
                    android:layout_gravity="center|center_vertical|clip_horizontal"
                    android:layout_marginStart="@dimen/margin_no_internet"
                    android:layout_marginEnd="@dimen/margin_no_internet"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_no_internet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="38dp"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/no_internet_title"
                    android:textColor="@color/dayNight_textColor"
                    android:textSize="@dimen/header_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:lineSpacingMultiplier="1.1"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/no_internet_description"
                    android:textAlignment="center"
                    android:textColor="@color/dayNight_textColor"
                    android:textSize="@dimen/content_text_size" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:setCountriesAdapter="@{viewModel.getAdapter()}" />
        </LinearLayout>
    </RelativeLayout>
</layout>